# enterprise-design

./: .env.example
event-store-project/: BASE_ENV_SETUP.md  README.md  docker-compose.yml  pyproject.toml
event-store-project/docs/: 01-concepts.md  02-setup.md  03-implementation.md  04-exercises.md  WEEK_1_INFO.md  WEEK_2_PREVIEW.md
event-store-project/sql/: test_connection.py
event-store-project/src/: event_store.py  events.py  main.py  order.py
event-store-project/tests/: test_order.py
temporal-Java/: SendSignal.java  Starter.java  Worker.java  docker-compose.yml  pom.xml  readme.md
temporal-Java/activities/: OrderActivities.java  OrderActivitiesImpl.java
temporal-Java/dynamicconfig/: dev-es.yaml
temporal-Java/model/: OrderInput.java
temporal-Java/test/: OrderWorkflowTest.java
temporal-Java/workflows/: OrderWorkflow.java  workflows copy.java
temporal-project/: docker-compose.yml
temporal-project/client-server/: BASE_ENV_SETUP.md  pyproject.toml
temporal-project/client-server/src/: send_signal.py  starter.py
temporal-project/docs/: 01-day1-concepts.md  02-day2-setup.md  03-day2-activities.md  04-day3-workflows.md  05-day4-retry-signals.md  06-day5-exercises.md  Info.md  README.md
temporal-project/dynamicconfig/: dev-es.yaml
temporal-project/shared/: pyproject.toml
temporal-project/shared/src/order_shared/: models.py  workflow_iface.py
temporal-project/worker-server/: BASE_ENV_SETUP.md  pyproject.toml
temporal-project/worker-server/src/: activities.py  worker.py  workflows.py
temporal-project/worker-server/tests/: test_activities.py
