[project]
name = "order-shared"
version = "1.0.0"
description = "Shared contracts for Order workflow"
requires-python = ">=3.11"

dependencies = [
    "temporalio>=1.5.1",
]

[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}